# forkreach

./: LICENSE  README.md
backend/: conversations_api.py  main.py  product_schema.sql  products_api.py  pyproject.toml  schema.sql  stream.py  supabase_client.py
backend/agents/: __init__.py  base_agent.py  coordinator.py  email_marketing_agent.py  landing_page_agent.py  launch_strategist_agent.py  twitter_agent.py
backend/uploads/: marketing-tips.txt
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/session/: layout.tsx  page.tsx
frontend/src/app/session/[chatId]/: page.tsx
frontend/src/components/: StarBorder.jsx  app-sidebar.tsx  design-input.tsx  header.tsx  preview-panel.tsx  product-context-modal.tsx  sidebar.tsx  skeleton.tsx  theme-toggle.tsx  toast.tsx
frontend/src/components/ai-elements/: agent-selector.tsx
frontend/src/components/kokonutui/: ai-prompt.tsx
frontend/src/components/ui/: sidebar.tsx  siderbar.tsx
frontend/src/contexts/: conversations-context.tsx
frontend/src/hooks/: use-sidebar-resize.ts  useAgents.ts  useConversations.ts  useProductContext.ts  useProjectWebSocket.ts
frontend/src/lib/: api.ts  merge-button-refs.ts
